Fixes link-icon spacing

--- a/Website/static/css/style.samm.css
+++ b/Website/static/css/style.samm.css
@@ -161,6 +161,7 @@ div.section {
 
 .link-icon {
   color: #66B8B8;
+  padding-right: 3px;
 }
 
 .subscribe-link {
